--- a/templates/profile.html
+++ b/templates/profile.html
@@ -137,7 +137,7 @@
                     content: '<form method="post">'
                         + '{% csrf_token %}'
                         + '<p>Input your new username:</p>'
-                        + '<input type="text" name="new_username" style="font-size: large; padding: 3px; width: 100%">'
+                        + '<input type="text" name="UserName" style="font-size: large; padding: 3px; width: 100%">'
                         + '<button id="submit-username" type="submit" hidden></button>'
                         + '</form>',
                     button: {
